force-app/main/default/objects/ER_Activity_Hour__c/ER_Activity_Hour__c.object-meta.xml
<CustomObject>
    <label>Activity Hour</label>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>