force-app/main/default/objects/ER_Activity_Hour__c/fields/ER_Opening_Hour__c.field-meta.xml
<CustomField>
    <fullName>ER_Opening_Hour__c</fullName>
    <label>Opening Hour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hours</valueSetName>
    </valueSet>
</CustomField>