force-app/main/default/objects/ER_Activity_Hour__c/fields/ER_Store__c.field-meta.xml
<CustomField>
    <fullName>ER_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>ER_Store__c</referenceTo>
    <relationshipLabel>Activity Hours</relationshipLabel>
    <relationshipName>Activity_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>